--- a/index.html
+++ b/index.html
@@ -4,8 +4,192 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300;500;600;700&family=Inter:wght@300;400;600;700;900&family=Merriweather:wght@400;700;900&family=Noto+Sans+Shavian&family=Open+Sans:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Heyy</h1>
+    <section id="hero">
+      <div class="hero_main">
+        <div class="her_child">
+          <h3>Happy New Year</h3>
+          <h1>New Year Party<br>Celebration</h1>
+        </div>
+      </div>
+    </section>
+
+    <section id="off">
+      <div class="off_main">
+        <div class="off_child">
+          <h1>65% OFF</h1>
+          <h3>OUR HOLIDAY DEALS ARE BETTER</h3>
+          <h2>ALL CATEGORIES</h2>
+          <img src="./images/New Year Photo.png" />
+        </div>
+      </div>
+    </section>
+
+    <section id="party">
+      <div class="party_main">
+        <div class="party_child">
+          <h3>Welcome to<br>midnight party</h3>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <h4>Join Now</h4>
+        </div>
+      </div>
+    </section>
+
+    <section id="park">
+      <div class="park_main">
+        <div class="park_child">
+          <h3><Span>Place:</Span> New Park Hotel</h3>
+          <h3><Span>Date:</Span> 31 December Night 2023</h3>
+          <h3><Span>Time:</Span> Evening 7.30 pm to 12.30 am</h3>
+          <Div class="btn">
+            <button>Join Now</button>
+          </Div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- <section id="comingsoon">
+      <div class="comingsoon_main">
+        <div class="comingsoon_child">
+          <h3>NEW BEST OFFER</h3>
+          <h1>Coming Soon</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+
+        <div class="comingsoon_child">
+          <img src="./images/Ellipse 1.png" />
+        </div>
+
+        <div class="comingsoon_child">
+          <h1>2024</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <img src="./images/Group 96.png" />
+        </div>
+      </div>
+    </section> -->
+
+    <section id="holiday">
+      <div class="holiday_main">
+        <div class="holiday_child">
+          <h3>WHAT IS FUNCTIONAL</h3>
+          <h1><span>Holidays Sale </span>50%</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. Eleifend nunc purus quam id fermentum amet amet sit
+            consectetur.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio">
+      <div class="portfolio_des">
+        <h3>THE BEST GIFTS</h3>
+        <h1>Our Awesome Portfolio</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod. Eleifend nunc purus quam id fermentum amet amet sit
+          consectetur.
+        </p>
+      </div>
+     <div class="gallery">
+        <div class="gallery1">
+            <div class="gallerychild">
+              <img src="./images/Rectangle 3.png" />
+            </div>
+            <div class="gallerychild">
+              <img src="./images/Rectangle 4.png" />
+            </div>
+            <div class="gallerychild">
+              <img src="./images/Rectangle 5.png" />
+            </div>
+          </div>
+    
+          <div class="gallery2">
+            <div class="gallerychild">
+              <img src="./images/Rectangle 6.png" />
+            </div>
+            <div class="gallerychild">
+              <img src="./images/Rectangle 7.png" />
+            </div>
+            <div class="gallerychild">
+              <img src="./images/Rectangle 8.png" />
+            </div>
+          </div>
+     </div>
+
+    </section>
+
+    <section id="newsletter">
+      <div class="newsletter_main">
+        <div class="newsletter_child">
+          <img src="./images/Group 61.png" />
+          <h1>Subscribe Newsletter</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <form class="subscribe-form" action="#" method="post">
+            <div class="form-group">
+              <input type="email" id="email" name="email" required />
+              <button type="submit">Subscribe</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section id="footer">
+
+    <div class="footer1">
+        <div class="footer_child">
+          <p>44, Big Building Roosevelt Street<br>Beach Gardens Florida 33410</p>
+        </div>
+        <div class="footer_child">
+          <i class="">+00 123 584 124</i>
+          <i class="">www.website.com</i>
+        </div>
+
+</div>
+<hr>
+<br>
+      <div class="footer2">
+           <img src="./images/Facebook.png"/>
+           <img src="./images/Instagram.png"/>
+           <img src="./images/Linkedin.png"/>
+           <img src="./images/Twitter.png"/>
+        </div>
+      </div>
+      <hr>
+      <div class="footer1">
+        <div class="footer_child">
+          <p>2017, All Rights Reserved.</p>
+        </div>
+        <div class="footer_child">
+          <p>Unsubscribe</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
